--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,13 +7,18 @@ environment:
   sdk: '>=3.0.6 <4.0.0'
 
 dependencies:
+  bloc: ^8.1.2
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  bloc_test: ^9.1.4
+  mocktail: ^1.0.0
 
 flutter:
   uses-material-design: true
