--- a/packages/ai_chat_repository/pubspec.yaml
+++ b/packages/ai_chat_repository/pubspec.yaml
@@ -8,7 +8,10 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
+  dart_openai: ^4.0.0
   equatable: ^2.0.5
+  meta: ^1.9.1
+  rxdart: ^0.27.7
   uuid: ^3.0.7
   # path: ^1.8.0
 
