--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: '>=3.0.6 <4.0.0'
 
 dependencies:
+  ai_chat_repository:
+    path: packages/ai_chat_repository
   bloc: ^8.1.2
   equatable: ^2.0.5
   flutter:
